log
Fri Mar 27 12:13:57 AM UTC 2026: 
 tests:  0|6
total_score: 0/60
b1981e4
Fri Mar 27 12:34:18 AM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
68eeb9e
Fri Mar 27 12:37:15 AM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
dc7994f
Fri Mar 27 12:38:30 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fd5f2ec
Fri Mar 27 12:49:28 AM UTC 2026: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:55:5: error: ‘else’ without a previous ‘if’
   55 |     else return NULL;
      |     ^~~~
469b65a
Fri Mar 27 12:50:12 AM UTC 2026: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
   60 | }
      | ^
cc1: all warnings being treated as errors
2e07fa6
Fri Mar 27 12:54:41 AM UTC 2026: 
 list.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  2|5
total_score: 15/60
bfcb03c
Fri Mar 27 12:58:02 AM UTC 2026: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:62:14: error: expected expression before ‘void’
   62 |             *void dato = list->current->data;
      |              ^~~~
list.c:63:20: error: ‘dato’ undeclared (first use in this function)
   63 |             return dato;
      |                    ^~~~
list.c:63:20: note: each undeclared identifier is reported only once for each function it appears in
list.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
   68 | }
      | ^
cc1: all warnings being treated as errors
f14b8ca
